--- a/ortak-konular/index.html
+++ b/ortak-konular/index.html
@@ -4,80 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ortak Konular - Adalet GYS Portalı</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
+    
+    <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
-<body>
-    <header class="navbar">
-        <div class="container">
-            <a href="../index.html" class="navbar-brand">Adalet GYS Portalı</a>
-            <nav class="navbar-nav">
-                <a href="../index.html" class="nav-link">Ana Sayfa</a>
-                <a href="../hakkinda.html" class="nav-link">Hakkında</a>
-                <a href="../iletisim.html" class="nav-link">İletişim</a>
-            </nav>
-        </div>
-    </header>
 
+<body data-needs-template="page">
     <main class="container page-content">
-        <section class="page-header">
-            <h1>Ortak Konular</h1>
-            <p>Sınavın %40'lık bölümünü oluşturan tüm konulara buradan ulaşabilirsiniz.</p>
-        </section>
-        
-        <section class="content-list">
-            <div class="list-item">
-                <h3><a href="01-tc-anayasasi.html">1. T.C. Anayasası</a></h3>
-                <p>Genel Esaslar, Temel Hak ve Ödevler, Devletin Temel Organları.</p>
+        <div class="card p-8 md:p-12">
+            <div class="text-center mb-10">
+                <h1 class="text-3xl md:text-4xl font-bold text-slate-800 mb-4">Ortak Konular</h1>
+                <p class="text-lg text-slate-600 max-w-2xl mx-auto">
+                    Sınavın %40'lık bölümünü oluşturan ve tüm unvanlar için zorunlu olan konuların listesine aşağıdan ulaşabilirsiniz.
+                </p>
             </div>
-            <div class="list-item">
-                <h3><a href="02-ataturk-ilkeleri.html">2. Atatürk İlkeleri ve İnkılap Tarihi</a></h3>
-                <p>Ulusal güvenlik konuları dahil.</p>
-            </div>
-            <div class="list-item">
-                <h3><a href="03-devlet-teskilati.html">3. Devlet Teşkilatı ve İlgili Mevzuat</a></h3>
-                <p>Türkiye'nin idari yapısı ve teşkilat şeması.</p>
-            </div>
-            <div class="list-item">
-                <h3><a href="04-dmk.html">4. 657 Sayılı Devlet Memurları Kanunu</a></h3>
-                <p>Devlet memurlarının hakları, ödevleri ve disiplin hükümleri.</p>
-            </div>
-            <div class="list-item">
-                <h3><a href="05-turkce-dil-bilgisi.html">5. Türkçe Dil Bilgisi ve Yazışma Kuralları</a></h3>
-                <p>Dil bilgisi, imla ve resmi yazışma usulleri.</p>
-            </div>
-            <div class="list-item">
-                <h3><a href="06-halkla-iliskiler.html">6. Halkla İlişkiler</a></h3>
-                <p>Kurumsal iletişim ve halkla ilişkiler temel kavramları.</p>
-            </div>
-            <div class="list-item">
-                <h3><a href="07-etik-davranis.html">7. Etik Davranış İlkeleri</a></h3>
-                <p>Kamu görevlileri için etik davranış kuralları.</p>
-            </div>
-            <div class="list-item">
-                <h3><a href="08-bakanlik-merkez-teskilati.html">8. Bakanlık Merkez Teşkilatı</a></h3>
-                <p>Adalet Bakanlığı'nın merkez teşkilat yapısı.</p>
-            </div>
-            <div class="list-item">
-                <h3><a href="09-yargi-orgutu-ortak.html">9. Yargı Örgütü (Ortak)</a></h3>
-                <p>Adli ve idari yargı adalet komisyonlarının yapısı ve görevleri.</p>
-            </div>
-            <div class="list-item">
-                <h3><a href="10-uyap-ortak.html">10. Ulusal Yargı Ağı Bilişim Sistemi (UYAP)</a></h3>
-                <p>UYAP'ın genel yapısı ve işleyişi.</p>
-            </div>
-            <div class="list-item">
-                <h3><a href="11-kamu-mali-yonetimi.html">11. 5018 Sayılı Kamu Mali Yönetimi ve Kontrol Kanunu</a></h3>
-                <p>Kamu maliyesinin temel ilkeleri ve kontrol mekanizmaları.</p>
-            </div>
-        </section>
-    </main>
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Adalet GYS Portalı. Tüm hakları saklıdır.</p>
+            <div class="space-y-4">
+                <a href="01-tc-anayasasi.html" class="block p-4 bg-slate-50 border rounded-lg hover:bg-teal-50 hover:border-teal-500 transition-colors">
+                    <h3 class="font-semibold text-lg text-slate-800">1. T.C. Anayasası</h3>
+                    <p class="text-slate-600">Genel Esaslar, Temel Hak ve Ödevler, Devletin Temel Organları.</p>
+                </a>
+                <a href="02-ataturk-ilkeleri.html" class="block p-4 bg-slate-50 border rounded-lg hover:bg-teal-50 hover:border-teal-500 transition-colors">
+                    <h3 class="font-semibold text-lg text-slate-800">2. Atatürk İlkeleri ve İnkılap Tarihi</h3>
+                    <p class="text-slate-600">Ulusal güvenlik konuları dahil.</p>
+                </a>
+                <a href="03-devlet-teskilati.html" class="block p-4 bg-slate-50 border rounded-lg hover:bg-teal-50 hover:border-teal-500 transition-colors">
+                    <h3 class="font-semibold text-lg text-slate-800">3. Devlet Teşkilatı ve İlgili Mevzuat</h3>
+                    <p class="text-slate-600">Türkiye'nin idari yapısı ve teşkilat şeması.</p>
+                </a>
+                <a href="04-dmk.html" class="block p-4 bg-slate-50 border rounded-lg hover:bg-teal-50 hover:border-teal-500 transition-colors">
+                    <h3 class="font-semibold text-lg text-slate-800">4. 657 Sayılı Devlet Memurları Kanunu</h3>
+                    <p class="text-slate-600">Devlet memurlarının hakları, ödevleri ve disiplin hükümleri.</p>
+                </a>
+                <a href="05-turkce-dil-bilgisi.html" class="block p-4 bg-slate-50 border rounded-lg hover:bg-teal-50 hover:border-teal-500 transition-colors">
+                    <h3 class="font-semibold text-lg text-slate-800">5. Türkçe Dil Bilgisi ve Yazışma Kuralları</h3>
+                    <p class="text-slate-600">Dil bilgisi, imla ve resmi yazışma usulleri.</p>
+                </a>
+                <a href="06-halkla-iliskiler.html" class="block p-4 bg-slate-50 border rounded-lg hover:bg-teal-50 hover:border-teal-500 transition-colors">
+                    <h3 class="font-semibold text-lg text-slate-800">6. Halkla İlişkiler</h3>
+                    <p class="text-slate-600">Kurumsal iletişim ve halkla ilişkiler temel kavramları.</p>
+                </a>
+                <a href="07-etik-davranis.html" class="block p-4 bg-slate-50 border rounded-lg hover:bg-teal-50 hover:border-teal-500 transition-colors">
+                    <h3 class="font-semibold text-lg text-slate-800">7. Etik Davranış İlkeleri</h3>
+                    <p class="text-slate-600">Kamu görevlileri için etik davranış kuralları.</p>
+                </a>
+                 </div>
         </div>
-    </footer>
-
-    <script src="../assets/js/main.js"></script>
+    </main>
 </body>
 </html>
