--- a/alan-konulari/index.html
+++ b/alan-konulari/index.html
@@ -4,44 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alan Konuları - Adalet GYS Portalı</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
+    
+    <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
-<body>
-    <header class="navbar">
-        <div class="container">
-            <a href="../index.html" class="navbar-brand">Adalet GYS Portalı</a>
-            <nav class="navbar-nav">
-                <a href="../index.html" class="nav-link">Ana Sayfa</a>
-                <a href="../hakkinda.html" class="nav-link">Hakkında</a>
-                <a href="../iletisim.html" class="nav-link">İletişim</a>
-            </nav>
-        </div>
-    </header>
 
+<body data-needs-template="page">
     <main class="container page-content">
-        <section class="page-header">
-            <h1>Alan Konuları</h1>
-            <p>İlgilendiğiniz unvanı seçerek sınava özel konulara ulaşabilirsiniz.</p>
-        </section>
-        
-        <section class="feature-cards">
-            <a href="yazi-isleri-muduru/" class="card">
-                <h2>📙 Yazı İşleri Müdürlüğü</h2>
-                <p>Sınavın %60'lık bölümünü oluşturan, Yazı İşleri Müdürlüğü unvanına özel tüm konu anlatımları ve testler.</p>
-            </a>
-            <div class="card disabled">
-                <h2>📗 İcra Müdürlüğü (Yakında)</h2>
-                <p>Bu unvan için içerikler hazırlık aşamasındadır.</p>
+        <div class="card p-8 md:p-12">
+            <div class="text-center mb-10">
+                <h1 class="text-3xl md:text-4xl font-bold text-slate-800 mb-4">Alan Konuları</h1>
+                <p class="text-lg text-slate-600 max-w-2xl mx-auto">
+                    Sınavın %60'lık bölümünü oluşturan, unvanınıza özel konulara aşağıdan ulaşabilirsiniz.
+                </p>
             </div>
-        </section>
-    </main>
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Adalet GYS Portalı. Tüm hakları saklıdır.</p>
+            <div class="grid md:grid-cols-2 gap-8 max-w-4xl mx-auto">
+                <a href="yazi-isleri-muduru/" class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col text-center items-center hover:border-teal-500 hover:shadow-md transition-all">
+                    <div class="mb-4 bg-teal-100 p-3 rounded-full inline-flex">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" /></svg>
+                    </div>
+                    <h2 class="text-xl font-semibold text-slate-800 mb-3">Yazı İşleri Müdürlüğü</h2>
+                    <p class="text-slate-600 flex-grow">
+                        Yazı İşleri Müdürlüğü unvanına özel tüm konu anlatımları ve testler.
+                    </p>
+                </a>
+
+                <div class="category-card bg-slate-50 p-6 rounded-lg border flex flex-col text-center items-center cursor-not-allowed opacity-60">
+                     <div class="mb-4 bg-slate-200 p-3 rounded-full inline-flex">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v.01" /></svg>
+                    </div>
+                    <h2 class="text-xl font-semibold text-slate-800 mb-3">İcra Müdürlüğü (Yakında)</h2>
+                    <p class="text-slate-600 flex-grow">
+                        Bu unvan için içeriklerimiz hazırlık aşamasındadır.
+                    </p>
+                </div>
+            </div>
         </div>
-    </footer>
-
-    <script src="../assets/js/main.js"></script>
+    </main>
 </body>
 </html>
