--- a/deneme-sinavlari/index.html
+++ b/deneme-sinavlari/index.html
@@ -4,48 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deneme Sınavları - Adalet GYS Portalı</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
+    
+    <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
-<body>
-    <header class="navbar">
-        <div class="container">
-            <a href="../index.html" class="navbar-brand">Adalet GYS Portalı</a>
-            <nav class="navbar-nav">
-                <a href="../index.html" class="nav-link">Ana Sayfa</a>
-                <a href="../hakkinda.html" class="nav-link">Hakkında</a>
-                <a href="../iletisim.html" class="nav-link">İletişim</a>
-            </nav>
-        </div>
-    </header>
 
+<body data-needs-template="page">
     <main class="container page-content">
-        <section class="page-header">
-            <h1>Deneme Sınavları Kategorileri</h1>
-            <p>Çözmek istediğiniz deneme sınavı türünü seçin.</p>
-        </section>
-        
-        <section class="feature-cards">
-            <a href="genel-denemeler/" class="card">
-                <h2>📚 Genel Denemeler</h2>
-                <p>Alan ve Ortak konulardan oluşan, gerçek sınav formatında tam deneme sınavları.</p>
-            </a>
-            <a href="#" class="card disabled">
-                <h2>📘 Ortak Konular Denemeleri (Yakında)</h2>
-                <p>Sadece Ortak Konular derslerinden oluşan özel denemeler.</p>
-            </a>
-            <a href="#" class="card disabled">
-                <h2>📙 Alan Konuları Denemeleri (Yakında)</h2>
-                <p>Yazı İşleri Müdürlüğü'ne özel Alan Konuları denemeleri.</p>
-            </a>
-        </section>
-    </main>
+        <div class="card p-8 md:p-12">
+            <div class="text-center mb-10">
+                <h1 class="text-3xl md:text-4xl font-bold text-slate-800 mb-4">Deneme Sınavları</h1>
+                <p class="text-lg text-slate-600 max-w-2xl mx-auto">
+                    Gerçek sınav deneyimine en yakın formatta hazırlanmış denemelerle kendinizi test edin ve zaman yönetimi becerinizi geliştirin.
+                </p>
+            </div>
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Adalet GYS Portalı. Tüm hakları saklıdır.</p>
+            <div class="category-grid">
+                <a href="genel-denemeler/" class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col text-center items-center hover:border-teal-500 hover:shadow-md transition-all">
+                    <div class="mb-4 bg-blue-100 p-3 rounded-full inline-flex">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 10h.01M15 10h.01M9 14h.01M15 14h.01"></path>
+                        </svg>
+                    </div>
+                    <h2 class="text-xl font-semibold text-slate-800 mb-3">Genel Denemeler</h2>
+                    <p class="text-slate-600 flex-grow">
+                        Ortak konular ve alan konularını kapsayan, tam sınav formatında hazırlanmış denemeler.
+                    </p>
+                </a>
+
+                <a href="alan-denemeleri/" class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col text-center items-center hover:border-teal-500 hover:shadow-md transition-all">
+                     <div class="mb-4 bg-teal-100 p-3 rounded-full inline-flex">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"></path>
+                        </svg>
+                    </div>
+                    <h2 class="text-xl font-semibold text-slate-800 mb-3">Alan Denemeleri</h2>
+                    <p class="text-slate-600 flex-grow">
+                        Yazı İşleri Müdürlüğü gibi belirli bir unvana yönelik hazırlanan özel denemeler.
+                    </p>
+                </a>
+
+                <a href="ortak-konular-denemeleri/" class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col text-center items-center hover:border-teal-500 hover:shadow-md transition-all">
+                    <div class="mb-4 bg-amber-100 p-3 rounded-full inline-flex">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-amber-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
+                        </svg>
+                    </div>
+                    <h2 class="text-xl font-semibold text-slate-800 mb-3">Ortak Konular Denemeleri</h2>
+                    <p class="text-slate-600 flex-grow">
+                        Sadece ortak konulardan oluşan, bilginizi pekiştirmeye yönelik mini denemeler.
+                    </p>
+                </a>
+            </div>
         </div>
-    </footer>
-
-    <script src="../assets/js/main.js"></script>
+    </main>
 </body>
 </html>
