--- a/deneme-sinavlari/index.html
+++ b/deneme-sinavlari/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deneme Sınavları - Adalet GYS Portalı</title>
+    <title>Ortak Konular Denemeleri - Adalet GYS Portalı</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
@@ -15,49 +15,41 @@
     <main class="container page-content">
         <div class="card p-8 md:p-12">
             <div class="text-center mb-10">
-                <h1 class="text-3xl md:text-4xl font-bold text-slate-800 mb-4">Deneme Sınavları</h1>
+                <h1 class="text-3xl md:text-4xl font-bold text-slate-800 mb-4">Ortak Konular Denemeleri</h1>
                 <p class="text-lg text-slate-600 max-w-2xl mx-auto">
-                    Gerçek sınav deneyimine en yakın formatta hazırlanmış denemelerle kendinizi test edin ve zaman yönetimi becerinizi geliştirin.
+                    Sınavın %40'lık bölümünü oluşturan ortak konulardaki bilginizi pekiştirmek için hazırlanmış mini denemeler.
                 </p>
             </div>
 
-            <div class="category-grid">
-                <a href="genel-denemeler/" class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col text-center items-center hover:border-teal-500 hover:shadow-md transition-all">
-                    <div class="mb-4 bg-blue-100 p-3 rounded-full inline-flex">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 10h.01M15 10h.01M9 14h.01M15 14h.01"></path>
-                        </svg>
+            <div class="space-y-4 max-w-3xl mx-auto">
+                <a href="deneme-1.html" class="block p-6 bg-slate-50 border rounded-lg hover:bg-teal-50 hover:border-teal-500 transition-colors">
+                    <div class="flex justify-between items-center">
+                        <div>
+                            <h3 class="font-semibold text-xl text-slate-800">Ortak Konular Denemesi - 1</h3>
+                            <p class="text-slate-600">T.C. Anayasası, Devlet Teşkilatı, 657 Sayılı DMK ve diğer ortak konular.</p>
+                        </div>
+                        <div class="text-teal-600">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M13 10V3L4 14h7v7l9-11h-7z" />
+                            </svg>
+                        </div>
                     </div>
-                    <h2 class="text-xl font-semibold text-slate-800 mb-3">Genel Denemeler</h2>
-                    <p class="text-slate-600 flex-grow">
-                        Ortak konular ve alan konularını kapsayan, tam sınav formatında hazırlanmış denemeler.
-                    </p>
                 </a>
 
-                <a href="alan-denemeleri/" class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col text-center items-center hover:border-teal-500 hover:shadow-md transition-all">
-                     <div class="mb-4 bg-teal-100 p-3 rounded-full inline-flex">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"></path>
-                        </svg>
+                <div class="block p-6 bg-slate-100 border rounded-lg cursor-not-allowed opacity-70">
+                     <div class="flex justify-between items-center">
+                        <div>
+                            <h3 class="font-semibold text-xl text-slate-500">Ortak Konular Denemesi - 2 (Yakında)</h3>
+                            <p class="text-slate-500">Yeni denemeler hazırlık aşamasındadır.</p>
+                        </div>
+                        <div class="text-slate-400">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
+                        </div>
                     </div>
-                    <h2 class="text-xl font-semibold text-slate-800 mb-3">Alan Denemeleri</h2>
-                    <p class="text-slate-600 flex-grow">
-                        Yazı İşleri Müdürlüğü gibi belirli bir unvana yönelik hazırlanan özel denemeler.
-                    </p>
-                </a>
+                </div>
 
-                <a href="ortak-konular-denemeleri/" class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col text-center items-center hover:border-teal-500 hover:shadow-md transition-all">
-                    <div class="mb-4 bg-amber-100 p-3 rounded-full inline-flex">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-amber-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
-                        </svg>
-                    </div>
-                    <h2 class="text-xl font-semibold text-slate-800 mb-3">Ortak Konular Denemeleri</h2>
-                    <p class="text-slate-600 flex-grow">
-                        Sadece ortak konulardan oluşan, bilginizi pekiştirmeye yönelik mini denemeler.
-                    </p>
-                </a>
             </div>
         </div>
     </main>
