--- a/deneme-sinavlari/ortak-konular-denemeleri/deneme-1.html
+++ b/deneme-sinavlari/ortak-konular-denemeleri/deneme-1.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ortak Konular Denemesi 1</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ortak Konular Denemesi 1 - Adalet GYS Portalı</title>
+
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
+    
+    <link rel="stylesheet" href="/adalet-gys-portal/assets/css/test.css">
+    
+    <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
+    <script src="/adalet-gys-portal/assets/js/test-engine.js" defer></script>
 </head>
-<body>
-  <header>
-    <h1>Ortak Konular Denemesi 1</h1>
-  </header>
-  <main>
-    <p>Bu sayfa, Ortak Konular Denemesi 1 için oluşturulmuştur.</p>
-  </main>
+
+<body data-needs-template="exam">
+
+    <main id="app-container" 
+        data-sheet-url="" 
+        data-exam-duration="50">
+        </main>
+
 </body>
 </html>
