--- a/deneme-sinavlari/alan-denemeleri/yazi-isleri-muduru/index.html
+++ b/deneme-sinavlari/alan-denemeleri/yazi-isleri-muduru/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alan Denemeleri - Adalet GYS Portalı</title>
+    <title>Yazı İşleri Müdürlüğü Denemeleri - Adalet GYS Portalı</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
@@ -15,31 +15,39 @@
     <main class="container page-content">
         <div class="card p-8 md:p-12">
             <div class="text-center mb-10">
-                <h1 class="text-3xl md:text-4xl font-bold text-slate-800 mb-4">Alan Denemeleri</h1>
+                <h1 class="text-3xl md:text-4xl font-bold text-slate-800 mb-4">Yazı İşleri Müdürlüğü Denemeleri</h1>
                 <p class="text-lg text-slate-600 max-w-2xl mx-auto">
-                    Sınavın %60'lık bölümünü oluşturan, unvanınıza özel konuları içeren deneme sınavlarıdır.
+                    Bu unvana özel olarak hazırlanmış alan konularını içeren deneme sınavlarıdır.
                 </p>
             </div>
 
-            <div class="grid md:grid-cols-2 gap-8 max-w-4xl mx-auto">
-                <a href="yazi-isleri-muduru/" class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col text-center items-center hover:border-teal-500 hover:shadow-md transition-all">
-                    <div class="mb-4 bg-teal-100 p-3 rounded-full inline-flex">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" /></svg>
+            <div class="space-y-4 max-w-3xl mx-auto">
+                <a href="deneme-1.html" class="block p-6 bg-slate-50 border rounded-lg hover:bg-teal-50 hover:border-teal-500 transition-colors">
+                    <div class="flex justify-between items-center">
+                        <div>
+                            <h3 class="font-semibold text-xl text-slate-800">Yazı İşleri Müdürlüğü Alan Denemesi - 1</h3>
+                            <p class="text-slate-600">60 Soru / 75 Dakika (Tahmini)</p>
+                        </div>
+                        <div class="text-teal-600">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M13 10V3L4 14h7v7l9-11h-7z" />
+                            </svg>
+                        </div>
                     </div>
-                    <h2 class="text-xl font-semibold text-slate-800 mb-3">Yazı İşleri Müdürlüğü</h2>
-                    <p class="text-slate-600 flex-grow">
-                        Bu unvana özel olarak hazırlanmış tam kapsamlı alan denemeleri.
-                    </p>
                 </a>
 
-                <div class="category-card bg-slate-50 p-6 rounded-lg border flex flex-col text-center items-center cursor-not-allowed opacity-60">
-                     <div class="mb-4 bg-slate-200 p-3 rounded-full inline-flex">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v.01" /></svg>
+                <div class="block p-6 bg-slate-100 border rounded-lg cursor-not-allowed opacity-70">
+                     <div class="flex justify-between items-center">
+                        <div>
+                            <h3 class="font-semibold text-xl text-slate-500">Yazı İşleri Müdürlüğü Alan Denemesi - 2 (Yakında)</h3>
+                            <p class="text-slate-500">Yeni denemeler hazırlık aşamasındadır.</p>
+                        </div>
+                        <div class="text-slate-400">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
+                        </div>
                     </div>
-                    <h2 class="text-xl font-semibold text-slate-800 mb-3">İcra Müdürlüğü (Yakında)</h2>
-                    <p class="text-slate-600 flex-grow">
-                        Bu unvan için denemelerimiz hazırlık aşamasındadır.
-                    </p>
                 </div>
             </div>
         </div>
