--- a/_templates/genel-sablon.html
+++ b/_templates/genel-sablon.html
@@ -3,6 +3,24 @@
         <a href="/adalet-gys-portal/index.html" class="navbar-brand">Adalet GYS Portalı</a>
         <nav class="navbar-nav">
             <a href="/adalet-gys-portal/index.html" class="nav-link">Ana Sayfa</a>
+            
+            <div class="nav-item dropdown">
+                <a href="#" class="nav-link">Konu Anlatımları</a>
+                <div class="dropdown-menu">
+                    <a href="/adalet-gys-portal/ortak-konular/">Ortak Konular</a>
+                    <a href="/adalet-gys-portal/alan-konulari/">Alan Konuları</a>
+                </div>
+            </div>
+
+            <div class="nav-item dropdown">
+                <a href="/adalet-gys-portal/deneme-sinavlari/" class="nav-link">Deneme Sınavları</a>
+                <div class="dropdown-menu">
+                    <a href="/adalet-gys-portal/deneme-sinavlari/genel-denemeler/">Genel Denemeler</a>
+                    <a href="/adalet-gys-portal/deneme-sinavlari/alan-denemeleri/">Alan Denemeleri</a>
+                    <a href="/adalet-gys-portal/deneme-sinavlari/ortak-konular-denemeleri/">Ortak Konular Denemeleri</a>
+                </div>
+            </div>
+
             <a href="/adalet-gys-portal/hakkinda.html" class="nav-link">Hakkında</a>
             <a href="/adalet-gys-portal/iletisim.html" class="nav-link">İletişim</a>
         </nav>
