--- a/_templates/sinav-sablonu.html
+++ b/_templates/sinav-sablonu.html
@@ -11,12 +11,29 @@
             <a href="/adalet-gys-portal/index.html" class="navbar-brand">Adalet GYS Portalı</a>
             <nav class="navbar-nav">
                 <a href="/adalet-gys-portal/index.html" class="nav-link">Ana Sayfa</a>
+                
+                <div class="nav-item dropdown">
+                    <a href="/adalet-gys-portal/ortak-konular/" class="nav-link">Konu Anlatımları</a>
+                    <div class="dropdown-menu">
+                        <a href="/adalet-gys-portal/ortak-konular/">Ortak Konular</a>
+                        <a href="/adalet-gys-portal/alan-konulari/">Alan Konuları</a>
+                    </div>
+                </div>
+
+                <div class="nav-item dropdown">
+                    <a href="/adalet-gys-portal/deneme-sinavlari/" class="nav-link">Deneme Sınavları</a>
+                    <div class="dropdown-menu">
+                        <a href="/adalet-gys-portal/deneme-sinavlari/genel-denemeler/">Genel Denemeler</a>
+                        <a href="/adalet-gys-portal/deneme-sinavlari/alan-denemeleri/">Alan Denemeleri</a>
+                        <a href="/adalet-gys-portal/deneme-sinavlari/ortak-konular-denemeleri/">Ortak Konular Denemeleri</a>
+                    </div>
+                </div>
+
                 <a href="/adalet-gys-portal/hakkinda.html" class="nav-link">Hakkında</a>
                 <a href="/adalet-gys-portal/iletisim.html" class="nav-link">İletişim</a>
             </nav>
         </div>
     </header>
-
     <main id="app-container" class="container page-content">
         <div id="timer-announcer" aria-live="polite" aria-atomic="true"></div>
 
@@ -49,7 +66,7 @@
                             </li>
                             <li class="flex items-start">
                                 <span class="mr-3 text-teal-500">✓</span>
-                                <p class="text-justify"><b>İşaretleme:</b> Sağ üstteki <svg class="inline-block h-5 w-5 text-slate-500 -mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6H8.5l-1-1H5a2 2 0 00-2 2z" /></svg> simgesine tıklayarak bir soruyu daha sonra gözden geçirmek için işaretleyebilirsiniz.</p>
+                                <p class="text-justify"><b>İşaretleme:</b> Sağ üstteki <svg class="inline-block h-5 w-5 text-slate-500 -mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6H8.5l-1-1H5a2 2 0 00-2 2z"></path></svg> simgesine tıklayarak bir soruyu daha sonra gözden geçirmek için işaretleyebilirsiniz.</p>
                             </li>
                             <li class="flex items-start">
                                 <span class="mr-3 text-teal-500">✓</span>
@@ -65,8 +82,8 @@
 
                 <button id="start-exam-btn" class="start-btn w-full md:w-auto inline-flex items-center justify-center text-white font-bold text-lg px-12 py-4 rounded-lg" disabled>
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" />
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z"></path>
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                     </svg>
                     <span id="start-btn-full-text">Sorular Yükleniyor...</span>
                 </button>
@@ -90,10 +107,10 @@
                     </div>
                     <button id="mark-review-btn" title="İncelemek için işaretle" class="flag-icon text-slate-400 hover:text-yellow-500" aria-label="Soruyu işaretle">
                         <svg id="flag-outline-icon" xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6H8.5l-1-1H5a2 2 0 00-2 2z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6H8.5l-1-1H5a2 2 0 00-2 2z"></path>
                         </svg>
                         <svg id="flag-solid-icon" xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 hidden" viewBox="0 0 20 20" fill="currentColor">
-                            <path d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" />
+                            <path d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z"></path>
                         </svg>
                     </button>
                 </div>
@@ -116,17 +133,11 @@
             <div class="card p-4 mt-6">
                 <h3 class="text-lg font-semibold mb-3">Soru Gezgini</h3>
                 <div class="flex flex-wrap items-center gap-x-4 gap-y-2 text-xs text-slate-500 mb-4 pb-2 border-b">
+                    <div class="flex items-center gap-1.5"><span class="w-3 h-3 rounded-full bg-green-500"></span>Cevaplanmış</div>
                     <div class="flex items-center gap-1.5">
-                        <span class="w-3 h-3 rounded-full bg-green-500"></span>Cevaplanmış
+                        <svg class="w-4 h-4 text-yellow-400" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd"></path></svg>İşaretli
                     </div>
-                    <div class="flex items-center gap-1.5">
-                        <svg class="w-4 h-4 text-yellow-400" viewBox="0 0 20 20" fill="currentColor">
-                            <path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd"></path>
-                        </svg>İşaretli
-                    </div>
-                    <div class="flex items-center gap-1.5">
-                        <span class="w-3 h-3 rounded-full bg-slate-300"></span>Boş
-                    </div>
+                    <div class="flex items-center gap-1.5"><span class="w-3 h-3 rounded-full bg-slate-300"></span>Boş</div>
                 </div>
                 <div id="nav-palette-container" class="grid grid-cols-8 sm:grid-cols-10 md:grid-cols-15 lg:grid-cols-20 gap-2"></div>
             </div>
@@ -137,49 +148,26 @@
                 <h2 id="result-title" class="text-3xl font-bold text-center mb-6">Sınav Sonucu</h2>
                 <div id="performance-summary" class="text-center text-lg text-slate-700 mb-8"></div>
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-center mb-10">
-                    <div class="p-4 bg-green-100 rounded-lg">
-                        <p class="text-2xl font-bold" id="correct-count">0</p>
-                        <p>Doğru</p>
-                    </div>
-                    <div class="p-4 bg-red-100 rounded-lg">
-                        <p class="text-2xl font-bold" id="incorrect-count">0</p>
-                        <p>Yanlış</p>
-                    </div>
-                    <div class="p-4 bg-slate-200 rounded-lg">
-                        <p class="text-2xl font-bold" id="empty-count">0</p>
-                        <p>Boş</p>
-                    </div>
-                    <div id="success-rate-box" class="p-4 bg-blue-100 rounded-lg">
-                        <p class="text-2xl font-bold" id="success-rate">0%</p>
-                        <p id="success-text">Başarı</p>
-                    </div>
+                    <div class="p-4 bg-green-100 rounded-lg"><p class="text-2xl font-bold" id="correct-count">0</p><p>Doğru</p></div>
+                    <div class="p-4 bg-red-100 rounded-lg"><p class="text-2xl font-bold" id="incorrect-count">0</p><p>Yanlış</p></div>
+                    <div class="p-4 bg-slate-200 rounded-lg"><p class="text-2xl font-bold" id="empty-count">0</p><p>Boş</p></div>
+                    <div id="success-rate-box" class="p-4 bg-blue-100 rounded-lg"><p class="text-2xl font-bold" id="success-rate">0%</p><p id="success-text">Başarı</p></div>
                 </div>
                 <div class="flex flex-wrap items-center gap-4 mb-6">
                     <button class="tab-btn flex-1 tab-active" id="wrong-answers-tab">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-red-500" viewBox="0 0 20 20" fill="currentColor">
-                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
-                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-red-500" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"></path></svg>
                         <span>Yanlış Cevaplar</span>
                     </button>
                     <button class="tab-btn flex-1" id="marked-questions-tab">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-yellow-500" viewBox="0 0 20 20" fill="currentColor">
-                            <path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd"></path>
-                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-yellow-500" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd"></path></svg>
                         <span>İşaretlenen Sorular</span>
                     </button>
                 </div>
-                <div id="wrong-answers-panel">
-                    <div id="wrong-answers-container" aria-live="polite"></div>
-                </div>
-                <div id="marked-questions-panel" class="hidden">
-                    <div id="marked-questions-container" aria-live="polite"></div>
-                </div>
-                <div class="text-center mt-12">
-                    <button id="restart-btn" class="start-btn text-white font-bold px-8 py-3 rounded-lg">Yeni Sınav Başlat</button>
-                </div>
+                <div id="wrong-answers-panel"><div id="wrong-answers-container" aria-live="polite"></div></div>
+                <div id="marked-questions-panel" class="hidden"><div id="marked-questions-container" aria-live="polite"></div></div>
+                <div class="text-center mt-12"><button id="restart-btn" class="start-btn text-white font-bold px-8 py-3 rounded-lg">Yeni Sınav Başlat</button></div>
             </div>
         </div>
-
     </main>
 
     <footer class="footer">
@@ -192,7 +180,7 @@
         <div class="card p-8 max-w-sm mx-auto text-center">
             <div class="mx-auto flex items-center justify-center h-12 w-12 rounded-full bg-yellow-100 mb-4">
                 <svg class="h-6 w-6 text-yellow-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"></path>
                 </svg>
             </div>
             <h3 class="text-xl font-bold text-slate-900 mb-4" id="alert-modal-title">UYARI</h3>
@@ -200,6 +188,5 @@
             <button id="alert-modal-ok-btn" class="px-8 py-2 bg-yellow-500 text-white rounded-md hover:bg-yellow-600">Tamam</button>
         </div>
     </div>
-
 </body>
 </html>
