--- a/_templates/genel-sablon.html
+++ b/_templates/genel-sablon.html
@@ -5,7 +5,7 @@
             <a href="/adalet-gys-portal/index.html" class="nav-link">Ana Sayfa</a>
             
             <div class="nav-item dropdown">
-                <a href="#" class="nav-link">Konu Anlatımları</a>
+                <a href="/adalet-gys-portal/konu-anlatimlari/" class="nav-link">Konu Anlatımları</a>
                 <div class="dropdown-menu">
                     <a href="/adalet-gys-portal/ortak-konular/">Ortak Konular</a>
                     <a href="/adalet-gys-portal/alan-konulari/">Alan Konuları</a>
