--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
+    
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
 
@@ -46,24 +47,10 @@
             </div>
         </section>
 
-        <section class="category-grid">
-            <div class="category-card">
-                <h2>📘 Ortak Konular</h2>
-                <p>Tüm unvanlar için zorunlu olan %40'lık bölümün konu anlatımları ve güncel testleri.</p>
-                <a href="/adalet-gys-portal/ortak-konular/" class="btn">Konuları İncele</a>
-            </div>
-
-            <div class="category-card">
-                <h2>📙 Alan Konuları</h2>
-                <p>Yazı İşleri Müdürlüğü ve diğer unvanlar için özel olarak hazırlanmış %60'lık bölümün içerikleri.</p>
-                 <a href="/adalet-gys-portal/alan-konulari/" class="btn">Konuları İncele</a>
-            </div>
-
-            <div class="category-card">
-                <h2>⏱️ Deneme Sınavları</h2>
-                <p>Gerçek sınav formatında tasarlanmış denemelerle ilerlemenizi ölçün ve eksiklerinizi tespit edin.</p>
-                 <a href="/adalet-gys-portal/deneme-sinavlari/" class="btn">Denemelere Başla</a>
-            </div>
+        <section class="card bg-teal-500 text-white p-8 md:p-12 rounded-lg text-center">
+            <h2 class="text-3xl font-bold mb-4">Hazırlığa Bugün Başlayın</h2>
+            <p class="text-lg text-teal-100 max-w-2xl mx-auto mb-6">Kariyerinizdeki bir sonraki adıma ulaşmak için daha fazla beklemeyin. İlk deneme sınavınızı şimdi çözün!</p>
+            <a href="/adalet-gys-portal/deneme-sinavlari/" class="btn bg-white text-teal-600 hover:bg-slate-100 text-lg px-8 py-3">Tüm Denemeleri Gör</a>
         </section>
     </main>
 </body>
