--- a/konu-anlatimlari/ortak-konular/index.html
+++ b/konu-anlatimlari/ortak-konular/index.html
@@ -17,7 +17,7 @@
             <div class="text-center mb-10">
                 <h1 class="text-3xl md:text-4xl font-bold text-slate-800 mb-4">Ortak Konular</h1>
                 <p class="text-lg text-slate-600 max-w-2xl mx-auto">
-                    Sınavın %40'lık bölümünü oluşturan ve tüm unvanlar için zorunlu olan konuların listesine aşağıdan ulaşabilirsiniz.
+                    Sınavın %40'lık bölümünü oluşturan ve tüm unvanlar için zorlu olan konuların listesine aşağıdan ulaşabilirsiniz.
                 </p>
             </div>
 
