--- a/konu-anlatimlari/index.html
+++ b/konu-anlatimlari/index.html
@@ -22,7 +22,7 @@
             </div>
 
             <div class="grid md:grid-cols-2 gap-8 max-w-4xl mx-auto">
-                <a href="/adalet-gys-portal/ortak-konular/" class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col text-center items-center hover:border-teal-500 hover:shadow-md transition-all">
+                <a href="ortak-konular/" class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col text-center items-center hover:border-teal-500 hover:shadow-md transition-all">
                     <div class="mb-4 bg-blue-100 p-3 rounded-full inline-flex">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
@@ -34,7 +34,7 @@
                     </p>
                 </a>
 
-                <a href="/adalet-gys-portal/alan-konulari/" class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col text-center items-center hover:border-teal-500 hover:shadow-md transition-all">
+                <a href="alan-konulari/" class="category-card bg-white p-6 rounded-lg border shadow-sm flex flex-col text-center items-center hover:border-teal-500 hover:shadow-md transition-all">
                      <div class="mb-4 bg-teal-100 p-3 rounded-full inline-flex">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-teal-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"></path>
