--- a/_templates/genel-sablon.html
+++ b/_templates/genel-sablon.html
@@ -38,5 +38,10 @@
             </a>
         </div>
         <p>&copy; 2025 Adalet GYS Portalı. Tüm hakları saklıdır.</p>
+        <div class="legal-links" style="margin-top: 1rem; font-size: 0.9rem;">
+            <a href="/adalet-gys-portal/gizlilik-politikasi.html" style="color: var(--secondary-color); margin: 0 0.5rem;">Gizlilik Politikası</a>
+            <span style="color: var(--border-color);">|</span>
+            <a href="/adalet-gys-portal/kullanim-kosullari.html" style="color: var(--secondary-color); margin: 0 0.5rem;">Kullanım Koşulları</a>
+        </div>
     </div>
 </footer>
