--- a/gizlilik-politikasi.html
+++ b/gizlilik-politikasi.html
@@ -17,7 +17,7 @@
         <div class="card p-8 md:p-12">
             <article class="konu-icerik">
                 <h1>Gizlilik Politikası</h1>
-                <p class="text-slate-500">Son Güncelleme: 31 Temmuz 2025</p>
+                <p class="text-slate-500" style="text-align: left;">Son Güncelleme: 31 Temmuz 2025</p>
 
                 <p>
                     Adalet GYS Portalı ("Site") olarak, kullanıcılarımızın gizliliğine büyük önem veriyoruz. Bu gizlilik politikası, platformumuzu ziyaret ettiğinizde hangi bilgilerin toplanmadığını ve mevcut verilerin nasıl kullanıldığını 6698 sayılı Kişisel Verilerin Korunması Kanunu (KVKK) uyarınca açıklamaktadır.
