--- a/kullanim-kosullari.html
+++ b/kullanim-kosullari.html
@@ -17,7 +17,7 @@
         <div class="card p-8 md:p-12">
             <article class="konu-icerik">
                 <h1>Kullanım Koşulları</h1>
-                <p class="text-slate-500">Son Güncelleme: 31 Temmuz 2025</p>
+                <p class="text-slate-500" style="text-align: left;">Son Güncelleme: 31 Temmuz 2025</p>
 
                 <p>
                     Lütfen Adalet GYS Portalı'nı ("Site") kullanmadan önce bu kullanım koşullarını dikkatlice okuyun. Bu Site'ye erişerek ve kullanarak, aşağıda belirtilen koşulları ve yasal uyarıları kabul etmiş sayılırsınız.
